# ai-integration-se-challenges-day2

./: README.md  _manual_validation.py  pyproject.toml  setup.sh
.github/workflows/: ci.yml  deploy.yml
good_wine_api/: lrfull.joblib  main.py
good_wine_api/tests/: test_main.py
