[project]
name = "ai-integration-se-challenges-day2"
version = "0.1.0"
description = "Project Red Wine Quality Prediction API"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.122.0",
    "httpx>=0.28.1",
    "joblib>=1.5.2",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.6",
]

[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"
]

[tool.setuptools.package-data]
myModule = ["*.joblib"]

# ruff
[tool.ruff.lint]
select = [
    "E4", "E7", "E9", "F", # basic rules
    "I", # isort
]

# pytest
[tool.pytest.ini_options]
addopts = "-sv --cov-branch"

# coverage
[tool.coverage.run]
branch = true
omit = [
    "docs/**",
    "public/**",
    "{% include 'package_name.jinja' %}/tests/**",
    "{% include 'package_name.jinja' %}/version.py",
]